--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,6 @@ nb-configuration.xml
 /.phpunit.*.cache
 
 /package-lock.json
-/public/assets/css/main.css
 /node_modules/
 /public/assets/js/main.bundle.js
+/public/assets/css/
