--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tailwind": "postcss resources/styles/tailwind.css  -o public/assets/css/tailwind.css",
+    "build": "npx gulp build",
+    "dev": "npx gulp default"
   },
   "repository": {
     "type": "git",
@@ -18,16 +21,21 @@
   },
   "homepage": "https://bitbucket.org/kipiwpartner/_telegram-bot-frontend#readme",
   "dependencies": {
+    "autoprefixer": "^10.4.14",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-run": "^1.7.1",
     "gulp-sass": "^5.1.0",
     "gulp-watch": "^5.0.1",
+    "postcss-cli": "^10.1.0",
     "sass": "^1.49.0",
+    "tailwindcss": "^3.2.7",
     "terser-webpack-plugin": "^5.3.0",
+    "watch": "^1.0.2",
     "webpack-stream": "^7.0.0"
   }
 }
